# agno-rag-chatbot

./: .cursorrules  .env.example  .gitignore  README.md  app.py  pyproject.toml  pytest.ini  requirement.txt  run.sh
agent_config/: agent.py  agent_prompt.py  db.py  document.py  file_store.py
backend/: main.py  schemas.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_streaming.py  test_upload_query_flow.py
tests/unit/: __init__.py  test_agent_config.py  test_file_store.py  test_pdf_errors.py  test_pdf_parser.py
