[project]
name = "agno-nicegui-python-challenge"
version = "0.1.0"
description = "RAG Document QA chatbot using FastAPI, Agno, and NiceGUI"
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }

authors = [
  { name = "Candidate", email = "candidate@example.com" },
]

dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "nicegui>=2.0.0",
  "agno>=0.2.0",
  "httpx>=0.27.0",
  "python-dotenv>=1.0.1",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.3.0",
  "python-multipart>=0.0.9",
  "pinecone-client>=5.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-check>=2.4.0",
  "anyio>=4.0.0",
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

